fix(icons): use better alignment relative to text

--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -2,8 +2,11 @@
 
 /*
  * 1. Avoid bad rendering on Webkit
+ * 2. Use better alignment between icon and text
  */
 .@{icon-prefix}:before {
+  position: relative;
+  top: 2px; /* 2 */
   line-height: 1;
   font-family: frontkit;
   font-style: normal;
